# VertAX

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  auto_diff_tutorial.py  bilevel_opt_hetero_manning.py  eq_prop_tutorial.py  pyproject.toml  requirements.in  requirements.txt  test_forward_modeling.py  test_inverse_modeling.py  test_minimization.py
automatic_diff/: create_geograph_from_image.py  edges.txt  faces.txt  fire_opt.py  input_image.tiff  start_cond_from_seeds.py  vertices.npy
automatic_diff/vertax/: cost.py  opt.py  plot.py  start.py  topo.py
dev/scripts/: plot_binaries.py
docs/: inverse_modelling_example.ipynb  inverse_modelling_example_bounded.ipynb  pbc_from_image.ipynb  pbc_from_image.py
docs/__marimo__/session/: pbc_from_image.py.json
figures/bounded/: vertax_eval_elongation.ipynb  vertax_eval_salt_n_pepper_2_fates.ipynb  vertax_eval_salt_n_pepper_3_fates.ipynb
old_20250121/dev/scripts/: create_initial_condition.py  plot_binaries.py  utils_binaries.py  utils_initial_condition.py
old_20250121/src/vertAX/: geograph.py  min_energy.py  min_eq_prop.py  model.py  utils_binaries.py  utils_geograph.py
old_20250121/src/vertAX/initial_conditions_voronoi/: simulation_heTable.npy  target_faceTable.npy  target_heTable.npy  target_vertTable.npy
old_20250121/vertax_20250131/: geo.py  opt.py  plot.py  start.py  topo.py
simulation_init/: faceTable.csv  faceTable.npy  heTable.csv  heTable.npy  vertTable.csv  vertTable.npy
src/vertAX/: geograph.py  min_eq_prop.py  test.py  topo_geo_graph.py
src/vertAX/binaries/: 10_vertTable.npy  11_vertTable.npy  12_heTable.npy  12_vertTable.npy  13_vertTable.npy  14_vertTable.npy  15_vertTable.npy  16_vertTable.npy  17_vertTable.npy  18_vertTable.npy  19_vertTable.npy  20_vertTable.npy  21_vertTable.npy  22_vertTable.npy  23_vertTable.npy  24_vertTable.npy  25_vertTable.npy  26_vertTable.npy  27_vertTable.npy  28_vertTable.npy  29_vertTable.npy  30_vertTable.npy  31_vertTable.npy  32_heTable.npy  32_vertTable.npy  33_vertTable.npy  34_vertTable.npy  35_vertTable.npy  36_vertTable.npy  37_vertTable.npy  38_vertTable.npy  39_vertTable.npy  3_faceTable.npy  3_heTable.npy  3_vertTable.npy  40_vertTable.npy  41_vertTable.npy  42_vertTable.npy  43_vertTable.npy  44_vertTable.npy  (+70 more)
src/vertAX/binaries/binaries_beta_0/: 0_vertTable.npy  100_vertTable.npy  101_vertTable.npy  102_vertTable.npy  103_vertTable.npy  104_vertTable.npy  105_vertTable.npy  106_vertTable.npy  107_vertTable.npy  108_vertTable.npy  109_vertTable.npy  10_vertTable.npy  110_vertTable.npy  111_vertTable.npy  112_vertTable.npy  113_vertTable.npy  114_vertTable.npy  115_vertTable.npy  116_vertTable.npy  117_vertTable.npy  118_vertTable.npy  119_vertTable.npy  (+182 more)
src/vertax/: __init__.py  bounded.py  cost.py  energy.py  geo.py  mesh.py  method_enum.py  opt.py  opt_bounded.py  pbc.py  plot.py  start.py  topo.py
src/vertax/bilevelopt/: bilevelopt.py  boundedbop.py  pbcbop.py
src/vertax/meshes/: pbc_mesh.py  plot.py
tests/: reference_result_test_forward_modeling.npz  reference_result_test_forward_modeling_bounded.npz  reference_result_test_inverse_modeling.npz  reference_result_test_inverse_modeling_bounded.npz  test_cpu_vs_gpu.py  test_forward_modeling.py  test_forward_modeling_bounded.py  test_forward_modeling_bounded_old.py  test_image.py  test_image.tif  test_image_rect.tif  test_inverse_modeling.py  test_inverse_modeling_bounded.py  test_inverse_modeling_rect.py  test_mesh.py  test_minimization.py  test_n_bilevel_opt.py  test_plot.py  test_plot_rectangular.py
tests/correlation/: base_mesh.npz  target_mesh.npz  test_e2.py
tests/correlation/input/: areas_init.txt  faceTable.npy  heTable.npy  line_tensions_init.txt  vertTable.npy
tests/correlation/results/: hyper-parameters.txt  summary.csv
vertax/: cost.py  geo.py  opt.py  plot.py  start.py  topo.py
(+242 files in other folders)
